<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KnockKnock</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_training_menu">TrainingMenu</string>
    <string name="title_activity_sound_settings">SoundSettings</string>
    <string name="welcomeSplash">Knock-Knock</string>
    <string name="ON">Turn Listening Off</string>
    <string name="OFF">Turn Listening On</string>
    <color name="blue1">#299ACC</color>
    <color name="blue2">#5BA9DD</color>
    <color name="blue3">#84B9E4</color>
    <color name="blue4">#ACCDEC</color>
    <string name="splashTraining">Add New Sound</string>
    <string name="splashSoundSettings">Sound Settings</string>
    <string name="colorGreen">#17C700</string>
    <string name="colorBG">#3CFFF82</string>
    <string name="colorPurple">#B282FF</string>
    <string name="colorYellow">#F5F525</string>
    <string name="colorRed">#F7366D</string>
    <string name="msgWelcome">Welcome</string>
    <string name="backButton">&lt;-</string>
    <string name="soundSelectionTitle">Settings</string>
    <string name="addNewSound">Add New Sound</string>
    <string name="notificationSettings">Notification Settings</string>
    <string name="backGroundListener">backGroundListener</string>
    <string name="title_activity_notification__screen">Notification_Screen</string>
    <string name="mainMenu">Main Menu</string>
    <string name="training_title">Sound Training</string>
    <string name="training_instruction">Before you proceed please get read to create the sound you wish to train Knock-Kock to detect. When you are ready press BEGIN to continue to the next step.</string>
    <string name="Begin">Begin</string>
    <string name="title_activity_training_listen">TrainingListen</string>
    <string name="training_listen_title">Record Sound</string>
    <string name="Done">Done</string>
    <string name="start">Start</string>
    <string name="title_activity_training_final">TrainingFinal</string>
    <string name="sucess">Success!</string>
    <string name="label_new_sound">Label New Sound:</string>
    <string name="save">Save</string>
    <string name="title_activity_nav_action_bar">NavActionBarActivity</string>
    <string name="action_bar_home">Home</string>
    <string name="action_bar_settings">Sound Settings</string>
    <string name="action_bar_training">Train New Sound</string>
    <string name="notificationSettingsTitle">Notification Options</string>
    <string name="notificationTypeTitle">Notification Type</string>
    <string name="notificationTypeVibrate">Vibrate</string>
    <string name="notificationTypeAlert">Alert</string>
    <string name="notificationTypePush">Push Notification</string>
    <string name="alertColorTitle">Alert Color</string>
    <string name="alertColorRed">Red</string>
    <string name="alertColorBlue">Blue</string>
    <string name="alertColorGreen">Green</string>
    <string name="alertColorPurple">Purple</string>
    <string name="alertColorYellow">Yellow</string>
    <string name="alertColorPeach">Peach</string>
    <string name="title_activity_specific_sound_settings">SpecificSoundSettings</string>
    <string name="title_activity_notification_preferences">NotificationPreferencesActivity</string>
    <string name="delete_sound">Delete Sound</string>
    <string name="delete_sound_message">Are you sure you want to delete this sound?</string>
    <string name="error">Error</string>
    <string name="soundLabelError">Sound names must be at least one character.</string>
    <string name="notificationAlert">!</string>
    <color name="Red">#EE3753</color>
    <color name="Green">#519B50</color>
    <color name="Blue">#0009FF</color>
    <color name="Purple">#884DA1</color>
    <color name="Yellow">#cdc12d</color>
    <color name="Peach">#e39a87</color>

</resources>
