<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue1"
    android:orientation="vertical"
    android:gravity = "center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashPage" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:src="@drawable/kklogo" 
        android:background = "@color/blue1"
        android:layout_weight="1"
        android:adjustViewBounds = "true"/>

    <ToggleButton
        android:id="@+id/splashOnOff"
        android:layout_width="fill_parent"
        android:layout_height="0dp" 
        android:layout_weight = "0.3"
        android:color= "@color/blue2"
        android:background="@color/blue2"
        android:textOn="@string/ON"
    	android:textOff="@string/OFF"
    	android:textSize="20dp"/>
    
    <Button
        android:id="@+id/trainingButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight = "0.3"
        android:background="@color/blue3"
        android:layout_centerHorizontal="true"
        android:onClick="toTrainMenu"
        android:text="@string/splashTraining" />

    
    <Button
        android:id="@+id/soundSettingsButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight = "0.3"
        android:background="@color/blue4"
        android:onClick="toSoundMenu"
        android:text="@string/splashSoundSettings"
        android:textSize="20dp" />

</LinearLayout>
